--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Test Application</string>
+    <string name="generic_network_error">Something went wrong. Please try again later.</string>
+    <string name="network_unavailable_error">Something went wrong. Please check your internet connetion.</string>
 </resources>
