--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Test Application</string>
     <string name="generic_network_error">Something went wrong. Please try again later.</string>
     <string name="network_unavailable_error">Something went wrong. Please check your internet connetion.</string>
+    <string name="network_unsecure_error">Your connection is not secure. The app cannot be used at the moment. Please check your connection and try again.</string>
+    <string name="close">close</string>
 </resources>
